--- a/app/src/main/res/layout/swipeviewfragment.xml
+++ b/app/src/main/res/layout/swipeviewfragment.xml
@@ -9,7 +9,7 @@
     android:focusableInTouchMode="true"
     android:background="@drawable/gradient_background"
     android:orientation="vertical"
-    tools:context=".MainActivity"
+    tools:context=".mainscreen.MainActivity"
     android:weightSum="1">
 
     <ImageView
