--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -10,22 +10,22 @@
     tools:context=".intro.SetupActivity">
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Some text that explains what&apos;s happening"
-        android:id="@+id/textView"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentTop="true"
+        android:text="Some text that explains what&apos;s happening"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <Button
+        android:id="@+id/setup_activity_setup_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Setup"
-        android:id="@+id/setup_activity_setup_button"
-        android:layout_below="@+id/textView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="122dp" />
+        android:layout_below="@+id/textView"
+        android:layout_marginTop="122dp"
+        android:text="Setup" />
 </RelativeLayout>
