--- a/app/src/main/res/layout/webview_layout.xml
+++ b/app/src/main/res/layout/webview_layout.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:weightSum="1">
 
     <WebView
+        android:id="@+id/webView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/webView"
         android:layout_gravity="center_horizontal"
         android:layout_weight="1.09" />
 </LinearLayout>
