--- a/app/src/main/res/layout/swipeviewfragment.xml
+++ b/app/src/main/res/layout/swipeviewfragment.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/gradient_background"
+    android:background="@color/primary3"
     android:focusableInTouchMode="true"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -13,7 +13,7 @@
     tools:context=".mainscreen.MainActivity">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/MusicPlayerFragment_ImageView_imageView"
         android:layout_width="fill_parent"
         android:layout_height="250dp"
         android:layout_weight="0.87"
@@ -23,15 +23,16 @@
     >
 
     <TextView
-        android:id="@+id/songinfo"
+        android:id="@+id/MusicPlayerFragment_TextView_songinfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:text="Velg en spilleliste"
+        android:textColor="@color/complementary2"
         android:textSize="20sp" />
 
     <EditText
-        android:id="@+id/playlist"
+        android:id="@+id/MusicPlayerFragment_EditText_playlist"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
@@ -54,12 +55,15 @@
         android:weightSum="10">
 
         <TextView
-            android:id="@+id/timePlayed"
+            android:id="@+id/MusicPlayerFragment_TextView_timePlayed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="@color/complementary2"
             android:text="@string/defaultTime"
             android:textAlignment="center"
+            android:visibility="invisible"
+
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textSize="20sp" />
 
@@ -70,21 +74,24 @@
             android:orientation="vertical">
 
             <ProgressBar
-                android:id="@+id/MusicPlayFragment_ProgressBar_progressBar"
+                android:id="@+id/MusicPlayerFragment_ProgressBar_progressBar"
                 style="@android:style/Widget.ProgressBar.Horizontal"
                 android:layout_width="fill_parent"
                 android:layout_height="10dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginTop="10dp"
+                android:visibility="invisible"
                 android:progress="0" />
         </LinearLayout>
 
         <TextView
-            android:id="@+id/song_length"
+            android:id="@+id/MusicPlayerFragment_TextView_songLength"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:paddingLeft="10dp"
+            android:textColor="@color/complementary2"
+            android:visibility="invisible"
             android:text="@string/defaultTime"
             android:textAlignment="center"
             android:textAppearance="?android:attr/textAppearanceSmall"
@@ -103,7 +110,7 @@
             android:orientation="horizontal">
 
             <ImageButton
-                android:id="@+id/play_or_pause"
+                android:id="@+id/MusicPlayerFragment_ImageButton_play_or_pause"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_alignParentEnd="true"
