--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -7,8 +7,10 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/primary3"
+    android:background="@color/primary1"
     tools:context=".intro.SetupActivity">
+
+
 
     <TextView
         android:id="@+id/textView"
@@ -18,7 +20,7 @@
         android:layout_centerHorizontal="true"
         android:text="SyncListener"
         android:textSize="40dp"
-        android:textColor="@color/white"
+        android:textColor="@color/complementary2"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:fontFamily="@string/spotocracy_font_family" />
 
@@ -29,7 +31,7 @@
         android:layout_below="@+id/textView"
         android:layout_marginTop="30dp"
         android:layout_centerHorizontal="false"
-        android:textColor="@color/white"
+        android:textColor="@color/complementary2"
         android:text="For å kunne bruke SyncListener kreves det at du har Spotify Premium. For å knytte sammen din spotify-konto med SyncListener trykker du på oppsett-knappen under."
         android:textSize="20dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -39,8 +41,8 @@
         android:id="@+id/setup_activity_setup_button"
         android:layout_width="200dp"
         android:layout_height="100dp"
-        android:background="@color/primary1"
-        android:textColor="@color/white"
+        android:background="@color/complementary5"
+        android:textColor="@color/complementary2"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:text="Setup" />
