--- a/app/src/main/res/layout-land/swipeviewfragment.xml
+++ b/app/src/main/res/layout-land/swipeviewfragment.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".mainscreen.MainActivity">
+    tools:context=".activity.MainActivity">
 
     <ImageView
         android:id="@+id/MusicPlayerFragment_ImageView_imageView"
