--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -7,43 +7,39 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/primary1"
-    tools:context=".intro.SetupActivity">
+    android:background="@color/primary5"
+    tools:context=".setup.SetupActivity">
 
-
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+    <ImageView
+        android:id="@+id/SetupActivity_ImageView_logo"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
         android:layout_centerHorizontal="true"
-        android:text="SyncListener"
-        android:textSize="40dp"
-        android:textColor="@color/complementary2"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:fontFamily="@string/spotocracy_font_family" />
+        android:layout_alignParentTop="true"
+        android:contentDescription="@string/logo"
+        android:src="@drawable/spotocracylogo" />
+    >
 
     <TextView
         android:id="@+id/textView_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView"
+        android:layout_below="@+id/SetupActivity_ImageView_logo"
         android:layout_marginTop="30dp"
         android:layout_centerHorizontal="false"
-        android:textColor="@color/complementary2"
-        android:text="For å kunne bruke SyncListener kreves det at du har Spotify Premium. For å knytte sammen din spotify-konto med SyncListener trykker du på oppsett-knappen under."
+        android:textColor="@color/white"
+        android:text="For å kunne bruke SyncListener kreves det at du har Spotify™ Premium. For å knytte sammen din spotify-konto med SyncListener trykker du på oppsett-knappen under."
         android:textSize="20dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:fontFamily="@string/spotocracy_font_family" />
 
     <Button
         android:id="@+id/setup_activity_setup_button"
-        android:layout_width="200dp"
-        android:layout_height="100dp"
-        android:background="@color/complementary5"
-        android:textColor="@color/complementary2"
+        android:layout_width="130dp"
+        android:layout_height="70dp"
+        android:background="@drawable/layout_bg"
+        android:textColor="@color/white"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:text="Setup" />
+        android:text="Start" />
 </RelativeLayout>
