--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".mainscreen.MainActivity">
+    tools:context=".activity.MainActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
