--- a/app/src/main/res/layout/swipeviewfragment.xml
+++ b/app/src/main/res/layout/swipeviewfragment.xml
@@ -1,128 +1,150 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@color/primary5"
-    android:focusableInTouchMode="true"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:weightSum="1"
-    tools:context=".activity.MainActivity">
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/MusicPlayerFragment_ImageView_imageView"
-        android:layout_width="fill_parent"
-        android:layout_height="250dp"
-        android:isScrollContainer="false"
-        android:layout_weight="0.87"
-        android:contentDescription="@string/logo"
-        android:scaleType="fitXY"
-        android:src="@drawable/spotocracylogo" />
-    >
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  xmlns:tools="http://schemas.android.com/tools"
+                  android:layout_width="fill_parent"
+                  android:layout_height="fill_parent"
+                  android:background="@color/primary5"
+                  android:focusableInTouchMode="true"
+                  android:orientation="vertical"
+                  android:paddingBottom="@dimen/activity_vertical_margin"
+                  android:paddingLeft="@dimen/activity_horizontal_margin"
+                  android:paddingRight="@dimen/activity_horizontal_margin"
+                  android:paddingTop="@dimen/activity_vertical_margin"
+                  android:weightSum="1"
+                  tools:context=".activity.MainActivity">
 
-    <TextView
-        android:id="@+id/MusicPlayerFragment_TextView_songinfo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:text="Velg en spilleliste"
-        style="@style/DefaultSyncListenerStyle"
-        android:textColor="@color/complementary1"
-        android:textSize="20sp" />
-
-    <EditText
-        android:id="@+id/MusicPlayerFragment_EditText_playlist"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/complementary2"
-        android:textColor="@color/primary5"
-        android:hint="@string/playlistname"
-        android:padding="10dp"
-        style="@style/DefaultSyncListenerStyle"
-        android:text="" />
-
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="15dp"
-        android:weightSum="10">
+        <ImageView
+            android:id="@+id/MusicPlayerFragment_ImageView_imageView"
+            android:layout_width="fill_parent"
+            android:layout_height="250dp"
+            android:layout_weight="0.87"
+            android:contentDescription="@string/logo"
+            android:isScrollContainer="false"
+            android:scaleType="fitXY"
+            android:src="@drawable/spotocracylogo"/>
+        >
 
         <TextView
-            android:id="@+id/MusicPlayerFragment_TextView_timePlayed"
+            android:id="@+id/MusicPlayerFragment_TextView_songinfo"
+            style="@style/DefaultSyncListenerStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:padding="10dp"
+            android:text="Velg en spilleliste"
             android:textColor="@color/complementary1"
-            android:text="@string/defaultTime"
-            android:textAlignment="center"
-            android:visibility="invisible"
+            android:textSize="20sp"/>
 
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textSize="20sp" />
+        <EditText
+            android:id="@+id/MusicPlayerFragment_EditText_playlist"
+            style="@style/DefaultSyncListenerStyle"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/complementary2"
+            android:hint="@string/playlistname"
+            android:imeOptions="actionDone"
+            android:padding="10dp"
+            android:singleLine="true"
+            android:text=""
+            android:textColor="@color/primary5"/>
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_weight="8"
-            android:orientation="vertical">
+            android:id="@+id/linearLayout"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="15dp"
+            android:weightSum="10">
 
-            <ProgressBar
-                android:id="@+id/MusicPlayerFragment_ProgressBar_progressBar"
-                style="@android:style/Widget.ProgressBar.Horizontal"
-                android:layout_width="fill_parent"
-                android:progressDrawable="@drawable/progressbarcolor"
-                android:layout_height="10dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginTop="10dp"
-                android:visibility="invisible"
-                android:progress="0" />
+            <TextView
+                android:id="@+id/MusicPlayerFragment_TextView_timePlayed"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/defaultTime"
+                android:textAlignment="center"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="@color/complementary1"
+
+                android:textSize="20sp"
+                android:visibility="invisible"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:layout_weight="8"
+                android:orientation="vertical">
+
+                <ProgressBar
+                    android:id="@+id/MusicPlayerFragment_ProgressBar_progressBar"
+                    style="@android:style/Widget.ProgressBar.Horizontal"
+                    android:layout_width="fill_parent"
+                    android:layout_height="10dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginTop="10dp"
+                    android:progress="0"
+                    android:progressDrawable="@drawable/progressbarcolor"
+                    android:visibility="invisible"/>
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/MusicPlayerFragment_TextView_songLength"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingLeft="10dp"
+                android:text="@string/defaultTime"
+                android:textAlignment="center"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="@color/complementary1"
+                android:textSize="20sp"
+                android:visibility="invisible"/>
+
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/MusicPlayerFragment_TextView_songLength"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:paddingLeft="10dp"
-            android:textColor="@color/complementary1"
-            android:visibility="invisible"
-            android:text="@string/defaultTime"
-            android:textAlignment="center"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textSize="20sp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/MusicPlayerFragment_LinearLayout_bottomLine"
             android:orientation="horizontal">
 
-            <ImageButton
-                android:id="@+id/MusicPlayerFragment_ImageButton_play_or_pause"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:adjustViewBounds="true"
-                android:background="#00000000"
-                android:contentDescription="@string/playOrPause"
-                android:gravity="center_horizontal"
-                android:scaleType="fitXY"
-                android:src="@drawable/synchronize" />
-        </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:orientation="horizontal">
 
+                <ImageButton
+                    android:id="@+id/MusicPlayerFragment_ImageButton_play_or_pause"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginLeft="16dp"
+                    android:adjustViewBounds="true"
+                    android:background="#00000000"
+                    android:contentDescription="@string/playOrPause"
+                    android:gravity="center_horizontal"
+                    android:scaleType="fitXY"
+                    android:visibility="invisible"
+                    android:src="@drawable/play"/>
+            </RelativeLayout>
+
+
+        </LinearLayout>
 
     </LinearLayout>
 
-</LinearLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/MusicPlayerFragment_FloatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:elevation="5dp"
+        android:clickable="true"
+        android:src="@drawable/synchronize"
+        app:layout_anchor="@id/MusicPlayerFragment_LinearLayout_bottomLine"
+        app:layout_anchorGravity="bottom|right|end"/>
+</android.support.design.widget.CoordinatorLayout>
