--- a/app/src/main/res/layout/swipeviewfragment.xml
+++ b/app/src/main/res/layout/swipeviewfragment.xml
@@ -11,7 +11,6 @@
                   android:background="@color/primary5"
                   android:focusableInTouchMode="true"
                   android:orientation="vertical"
-                  android:paddingBottom="@dimen/activity_vertical_margin"
                   android:paddingLeft="@dimen/activity_horizontal_margin"
                   android:paddingRight="@dimen/activity_horizontal_margin"
                   android:paddingTop="@dimen/activity_vertical_margin"
@@ -108,15 +107,9 @@
 
         <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:id="@+id/MusicPlayerFragment_LinearLayout_bottomLine"
             android:orientation="horizontal">
-
-            <RelativeLayout
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:orientation="horizontal">
-
                 <ImageButton
                     android:id="@+id/MusicPlayerFragment_ImageButton_play_or_pause"
                     android:layout_width="40dp"
@@ -129,10 +122,7 @@
                     android:gravity="center_horizontal"
                     android:scaleType="fitXY"
                     android:visibility="invisible"
-                    android:src="@drawable/play"/>
-            </RelativeLayout>
-
-
+                    android:src="@drawable/playoptional"/>
         </LinearLayout>
 
     </LinearLayout>
