--- a/app/src/main/res/layout/notification_small.xml
+++ b/app/src/main/res/layout/notification_small.xml
@@ -121,7 +121,7 @@
                 android:layout_width="55dp"
                 android:layout_height="64dp"
                 android:clickable="true"
-                android:src="@drawable/quit_small"/>
+                android:src="@drawable/exit_small"/>
 
         </RelativeLayout>
 
