--- a/app/src/main/res/layout/notification_small.xml
+++ b/app/src/main/res/layout/notification_small.xml
@@ -35,6 +35,7 @@
             android:paddingTop="5dp"
             android:minWidth="120dp"
             android:id="@+id/Notification_Top_Right"
+            android:clickable="true"
             android:layout_weight="0.5"
             android:layout_alignParentTop="true">
 
