--- a/app/src/main/res/layout/addplaylist.xml
+++ b/app/src/main/res/layout/addplaylist.xml
@@ -8,7 +8,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="hellsenmetal"
+        android:text=""
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         />
